Update and rename sumario.yml to .github/workflows/sumario.yml

--- a/.github/workflows/sumario.yml
+++ b/.github/workflows/sumario.yml
@@ -19,4 +19,4 @@ build:
       env:
         GITHUB_TOKEN: ${{ secrets.profile-summary-cards-token }}
       with:
-        USERNAME: ${{ github.repository_owner }}
+        USERNAME: ${{ github.zzpropheta }}
