--- a/.github/workflows/profile-summary-cards.yml
+++ b/.github/workflows/profile-summary-cards.yml
@@ -19,4 +19,4 @@ build:
       env:
         GITHUB_TOKEN: ${{ secrets.profile-summary-cards-token }}
       with:
-        USERNAME: ${{ github.zzpropheta }}
+        USERNAME: ${{ github.repository_owner }}
