--- a/.github/workflows/profile-summary-cards.yml
+++ b/.github/workflows/profile-summary-cards.yml
@@ -17,6 +17,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: vn7n24fzkq/github-profile-summary-cards@release
         env:
-          GITHUB_TOKEN: ${{ secrets.profile-summary-cards-token }}
+          GITHUB_TOKEN: ${{ secrets.SUMMARY }}
         with:
           USERNAME: ${{ github.repository_owner }}
