--- a/.github/workflows/profile-summary-cards.yml
+++ b/.github/workflows/profile-summary-cards.yml
@@ -1,5 +1,6 @@
 name: GitHub-Profile-Summary-Cards
 
+
 on:
   create:
   schedule: # execute every 24 hours
@@ -14,27 +15,26 @@ jobs:
       contents: write
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      
-      - name: Generate GitHub Profile Summary Cards
-        uses: vn7n24fzkq/github-profile-summary-cards@release
-        env:
-          GITHUB_TOKEN: ${{ secrets.SUMMARY }}
-        with:
-          USERNAME: ${{ github.repository_owner }}
+        - name: Checkout Repository
+          uses: actions/checkout@v2
 
-      - name: Verify Output Directory
-        run: |
-          if [ ! -d "./profile-summary-card-output" ]; then
-            echo "Error: Output directory does not exist."
-            exit 1
-          fi
-
-      - name: Commit and Push Changes
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add ./profile-summary-card-output/
-          git commit -m "Update GitHub Summary Cards"
-          git push
+        - name: Generate GitHub Profile Summary Cards
+          uses: vn7n24fzkq/github-profile-summary-cards@release
+          env:
+            GITHUB_TOKEN: ${{ secrets.SUMMARY }}
+          with:
+            USERNAME: ${{ github.repository_owner }}
+  
+        - name: Ensure Output Directory Exists
+          run: mkdir -p ./profile-summary-card-output
+  
+        - name: Commit and Push Changes
+          run: |
+            if [ -d "./profile-summary-card-output" ] && [ "$(ls -A ./profile-summary-card-output)" ]; then
+              git config --global user.name "github-actions[bot]"
+              git config --global user.email "github-actions[bot]@users.noreply.github.com"
+              git add ./profile-summary-card-output/
+              git commit -m "Update GitHub Summary Cards"
+              git push
+            else
+              echo "No changes to commit."
